Issue #451: add ClassDataAbstractionCoupling to checkstyle config